# enterprise-rag-knowledge-base

./: .dockerignore  .env.example  .env.production.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile
backend/app/: main.py
backend/tests/: test_analysis_report_models.py  test_analysis_schemas.py  test_analysis_task_services.py  test_analysis_tasks_api.py  test_audit_log_model.py  test_audit_log_services.py  test_auth.py  test_auth_dependencies.py  test_conversation_model.py  test_conversation_services.py  test_conversations.py  test_cross_workspace_isolation_regression.py  test_docker_v1_upgrade_validation.py  test_document_chunk_services.py  test_document_chunkers.py  test_document_embeddings.py  test_document_model.py  test_document_parsers.py  test_document_services.py  test_documents.py  test_e2e_api.py  test_embeddings.py  test_evaluation_dataset.py  test_health.py  test_knowledge_bases.py  (+36 more)
docs/: api.md  architecture.md  cv-entry.md  demo-video.md  deployment.md  development-roadmap.md  evaluation.md  release-v1.0.0.md  release-v2.0.0.md  security.md  v2.0-upgrade-plan.md
evaluations/: README.md  rag_qa_dataset.jsonl  retrieval_metrics.json  retrieval_predictions.jsonl
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml
migrations/: README.md  env.py
scripts/: run_retrieval_evaluation.py  validate_docker_v1_upgrade.py  validate_migration_startup.py  validate_workspace_migration.py
(+138 files in other folders)
